fix: changer parent remove overflow: hidden

--- a/museum-dom/src/sass/_explore.sass
+++ b/museum-dom/src/sass/_explore.sass
@@ -9,7 +9,6 @@
     position: relative
     width: 100%
     height: 100%
-    overflow: hidden
     &_before
       position: absolute
       left: 0
